--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,7 @@ ipch/
 *.cachefile
 *.VC.db
 *.VC.VC.opendb
+*.cache
 
 # Visual Studio profiler
 *.psess
@@ -477,3 +478,16 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# Others
+*.Cache
+ClientBin/
+[Ss]tyle[Cc]op.*
+~$*
+*~
+*.dbmdl
+*.[Pp]ublish.xml
+*.pfx
+*.publishsettings
+modulesbin/
+tempbin/
