--- a/.gitignore
+++ b/.gitignore
@@ -221,8 +221,17 @@ project.lock.json
 *.feature.xlsx.*
 *.Specs_*.html
 
+# remove specific file from git cache
+git rm --cached filename
+
+# remove all files from git cache
+git rm -r --cached .
+git add .
+git commit -m ".gitignore is now working"
+
 #####
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
 #####
+
 
 
