--- a/IGotUScraperApi/Application/IGotUScraper.Application.csproj
+++ b/IGotUScraperApi/Application/IGotUScraper.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,7 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Handlers\Autenticacao\Command\" />
+    <Compile Remove="Handlers\Autenticacao\**" />
+    <EmbeddedResource Remove="Handlers\Autenticacao\**" />
+    <None Remove="Handlers\Autenticacao\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
