--- a/IGotUScraperApi/.gitignore
+++ b/IGotUScraperApi/.gitignore
@@ -70,7 +70,6 @@ ipch/
 *.opensdf
 *.sdf
 *.cachefile
-*cache 
 
 # Visual Studio profiler
 *.psess
@@ -132,7 +131,6 @@ ClientBin/
 *.publishsettings
 modulesbin/
 tempbin/
-*.cache 
 
 # EPiServer Site file (VPP)
 AppData/
@@ -223,17 +221,8 @@ project.lock.json
 *.feature.xlsx.*
 *.Specs_*.html
 
-# remove specific file from git cache
-git rm --cached filename
-
-# remove all files from git cache
-git rm -r --cached .
-git add .
-git commit -m ".gitignore is now working"
-
 #####
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
 #####
 
-
-
+CdlBh.Filiacao.Api/Properties/launchSettings.json
