--- a/IGotUScraperApi/Application/IGotUScraper.Application.csproj
+++ b/IGotUScraperApi/Application/IGotUScraper.Application.csproj
@@ -13,7 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
     <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.8.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
 
