--- a/IGotUScraperApi/Utilities/IGotUScraper.Utilities.csproj
+++ b/IGotUScraperApi/Utilities/IGotUScraper.Utilities.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
 </Project>
