--- a/IGotUScraperApi/IGotUScraperApi/IGotUScraper.Api.csproj
+++ b/IGotUScraperApi/IGotUScraperApi/IGotUScraper.Api.csproj
@@ -23,4 +23,12 @@
     <ProjectReference Include="..\Infrastructure\IGotUScraper.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Startup\Database\Scripts\" />
+  </ItemGroup>
+
 </Project>
