Criando nova Controller, adicionando automapper, conexão com o banco de dados

--- a/IGotUScraperApi/Domain/IGotUScraper.Domain.csproj
+++ b/IGotUScraperApi/Domain/IGotUScraper.Domain.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Interfaces\Repositories\Database\Empresa\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySqlConnector" Version="2.2.5" />
+  </ItemGroup>
+
 </Project>
