--- a/IGotUScraperApi/IGotUScraperApi/appsettings.json
+++ b/IGotUScraperApi/IGotUScraperApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "pelandodb": "Server=localhost;User=root;Password='';Database=dbpelando"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
