--- a/IGotUScraperApi/Domain/IGotUScraper.Domain.csproj
+++ b/IGotUScraperApi/Domain/IGotUScraper.Domain.csproj
@@ -7,11 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\Repositories\Database\Empresa\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Flunt" Version="2.0.5" />
     <PackageReference Include="MySqlConnector" Version="2.2.5" />
+    <PackageReference Include="System.Collections" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
