--- a/IGotUScraperApi/Infrastructure/IGotUScraper.Infrastructure.csproj
+++ b/IGotUScraperApi/Infrastructure/IGotUScraper.Infrastructure.csproj
@@ -10,8 +10,10 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
+    <PackageReference Include="Flunt" Version="2.0.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="MySqlConnector" Version="2.2.5" />
+    <PackageReference Include="System.Collections" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
