--- a/IGotUScraperApi/Application/IGotUScraper.Application.csproj
+++ b/IGotUScraperApi/Application/IGotUScraper.Application.csproj
@@ -17,7 +17,9 @@
     <PackageReference Include="Flunt" Version="2.0.5" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
     <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="MySqlConnector" Version="2.2.5" />
+    <PackageReference Include="Pankraty.FluentValidation.HttpExtensions" Version="0.2.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.8.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
     <PackageReference Include="System.Collections" Version="4.3.0" />
